[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Themes/DarkThemeFlat.tres" type="Theme" id=1]
[ext_resource path="res://LogIn/LogIn.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/BlueAssets/Blue_material.tres" type="Material" id=3]
[ext_resource path="res://Assets/Images/icons/White_circle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/icons/White_circle2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Nunito_bold_x2.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/CustomNodes/Tween.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Images/icons/gear_white128.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/icons/gearflat_gray128.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "loading"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Loader/TextureProgress:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00114691, 1, 1.2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0, 100.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Loader/TextureProgress2:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0, 100.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Loader/TextureProgress3:value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0, 100.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Loader/TextureProgress4:value")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0, 100.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Loader/TextureProgress:radial_initial_angle")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 1.2, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 45.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Loader/TextureProgress2:radial_initial_angle")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 1.2, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 180.0, 225.0, 225.0, 180.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Loader/TextureProgress3:radial_initial_angle")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1, 1.2, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 90.0, 135.0, 135.0, 90.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Loader/TextureProgress4:radial_initial_angle")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1, 1.2, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 270.0, 315.0, 315.0, 270.0 ]
}

[node name="LogIn" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Loader" type="CenterContainer" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1080.0
margin_bottom = 1920.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2

[node name="TextureProgress" type="TextureProgress" parent="Loader"]
margin_left = 824.0
margin_top = 1664.0
margin_right = 1336.0
margin_bottom = 2176.0
mouse_filter = 2
max_value = 400.0
value = 30.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 8
radial_initial_angle = 45.0

[node name="TextureProgress2" type="TextureProgress" parent="Loader"]
margin_left = 824.0
margin_top = 1664.0
margin_right = 1336.0
margin_bottom = 2176.0
mouse_filter = 2
max_value = 400.0
value = 30.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 8
radial_initial_angle = 225.0

[node name="TextureProgress3" type="TextureProgress" parent="Loader"]
margin_left = 824.0
margin_top = 1664.0
margin_right = 1336.0
margin_bottom = 2176.0
mouse_filter = 2
max_value = 400.0
value = 30.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 8
radial_initial_angle = 135.0

[node name="TextureProgress4" type="TextureProgress" parent="Loader"]
margin_left = 824.0
margin_top = 1664.0
margin_right = 1336.0
margin_bottom = 2176.0
mouse_filter = 2
max_value = 400.0
value = 30.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 8
radial_initial_angle = 315.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1080.0
margin_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
text = "Quiz App"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 1080.0
margin_bottom = 688.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1040.0
margin_bottom = 438.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Login" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
context_menu_enabled = false
placeholder_text = "Login"

[node name="Password" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 1000.0
margin_bottom = 262.0
size_flags_horizontal = 3
size_flags_vertical = 3
secret = true
context_menu_enabled = false
placeholder_text = "Password"

[node name="LogInButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 1000.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Log In"

[node name="Tween2" parent="VBoxContainer/MarginContainer" instance=ExtResource( 7 )]

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 160.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="host" type="LineEdit" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_right = -40.0
margin_bottom = 63.0
placeholder_text = "Host"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/loading = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Tween" parent="." instance=ExtResource( 7 )]

[connection signal="text_entered" from="VBoxContainer/MarginContainer/VBoxContainer/Password" to="." method="LogIn"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/LogInButton" to="." method="LogIn"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="text_changed" from="host" to="." method="_on_LineEdit_text_changed"]
[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
